added a hamburger button

--- a/css/Style.css
+++ b/css/Style.css
@@ -55,12 +55,36 @@ ul{
     background: white;
     padding: 0 2rem;
     height: 0rem;
-    min-height: 40vh;
+    min-height: 10vh;
     overflow: hidden;
+    transition: height 0.8s ease-in-out;
 }
 
 .nav .nav-menu{
     justify-content: space-between;
+}
+
+.nav .toggle-collapse{
+    position: absolute;
+    top: 0;
+    width: 90%;
+    cursor: pointer;
+    display: none;
+}
+
+.nav .toggle-collapse .toggle-icons{
+    display: flex;
+    justify-content: flex-end;
+    padding: 1.7rem 0;
+}
+
+.nav .toggle-collapse .toggle-icons i{
+    font-size: 1.4rem;
+    color: var(--text-gray);
+}
+
+.collapse{
+    height: 30rem;
 }
 
 .nav .nav-items{
@@ -83,23 +107,14 @@ ul{
     font-family: var(--Lexend);
     font-size: 1.6rem;
 }
-
-.nav .nav-items .nav-link:hover{
-    background-color: var(--midnight);
-}
-
-.nav .nav-items .nav-link:hover a{
+Amazing Place on Earths .nav-link:hover a{
     color: var(--white);
 }
 
 
 .nav .social{
     padding: 1.4rem 0;
-}
-
-.nav .social i{
-    padding: 0 .2rem;
-}
+}3
 
 .nav .social i:hover{
     color: #a1a1a1;
@@ -109,13 +124,38 @@ ul{
 /* -----X----Close navBar-----X--- */
 
 
+/* --------------- Main Content ------------ */
 
+
+/* --------------- Site Title ------------ */
+
+main .site-title{
+    background: url("../assets/Background-image.png");
+    background-size: cover;
+    height: 110vh;
+    display: flex;
+    justify-content: center;
+}
+
+main .site-title .site-background{
+    padding-top: 10rem;
+
+}
+
+/* -----XX---------- Site Title ------XX------ */
+
+
+/* -----XX---------- Main Content ------XX------ */
 
 /*  Viewport less then or equal to 750px */
 
 @media only screen and (max-width: 750px){
-    .nav{
-        background: black;
+    .nav .nav-menu, .nav .nav-items{
+        flex-direction: column;
+    }
+
+    .nav .toggle-collapse{
+        display: initial;
     }
 }
 
