--- a/css/Style.css
+++ b/css/Style.css
@@ -69,6 +69,14 @@ button.btn{
     cursor: pointer;
 }
 
+span{
+    font-family: var(--Abel);
+}
+
+.container{
+    margin: 0 5vw;
+}
+
 /* x---------- Closing Global Classes --------- */
 
 
@@ -107,7 +115,7 @@ button.btn{
 }
 
 .collapse{
-    height: 30rem;
+    height: 31rem;
 }
 
 .nav .nav-items{
@@ -129,16 +137,11 @@ button.btn{
     display: block;
     font-family: var(--Lexend);
     font-size: 1.6rem;
-}
-
-.nav.nav-link:hover a{
-    color: var(--white);
-}
-
+}/* --------------- Blog Carousel -------------- */
 
 .nav .social{
     padding: 1.4rem 0;
-}3
+}
 
 .nav .social i:hover{
     color: #a1a1a1;
@@ -178,11 +181,53 @@ main .site-title .btn{
 
 main .site-title .btn:hover{
     background: transparent;
-    border: 5px var(--white);
+    border: 1px var(--white);
     color: var(--white);
 }
 
 /* -----XX---------- Site Title ------XX------ */
+
+
+/* --------------- Blog Carousel -------------- */
+
+main .blog{
+    background: url('../assets/Abract01.png');
+    background-repeat: no-repeat;
+    background-position: right;
+    height: 100vh;
+    width: 100%;
+    background-size: 65%;
+}
+
+main .blog .blog-post{
+    padding-top: 6rem;
+}
+
+main .blog-post .blog-content{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 80%;
+    margin: 3rem 2rem;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.2);
+}
+
+main .blog-content .blog-title{
+    padding: 2rem 0;
+}
+
+main .blog-content .btn-blog{
+    padding: .7rem 2rem;
+    background: var(--sky);
+    margin: .5rem;
+}
+
+main .blog-content span{
+    display: block;
+}
+
+
+/* -------xx-------- Blog Carousel -------xx------- */
 
 
 /* -----XX---------- Main Content ------XX------ */
